# sphinx-pdf-generate

./: .buildinfo  .gitignore  .pre-commit-config.yaml  LICENSE.md  Makefile  README.rst  changelog.html  cli.html  contribute.html  customisation.html  genindex.html  index.html  install.html  noxfile.py  objects.inv  options.html  pdf_metadata.json  pyproject.toml  quickstart.html  searchindex.js  sitemap.xml
.doctrees/: changelog.doctree  cli.doctree  contribute.doctree  customisation.doctree  environment.pickle  index.doctree  install.doctree  options.doctree  quickstart.doctree
.github/workflows/: ci.yaml  ci.yml  main.yaml  main.yml  sphinx_test.yaml
_sources/: changelog.rst.txt  contribute.rst.txt  customisation.rst.txt  index.rst.txt  install.rst.txt  options.rst.txt  quickstart.rst.txt
docs/: changelog.rst  cli.rst  conf.py  contribute.rst  customisation.rst  index.rst  options.rst  requirements.txt  research.md
docs/test/: index.rst
sphinx_pdf_generate/: __init__.py  __main__.py  build.py  cli.py  cover.py  options.py  pdf_generate.py  renderer.py  toc.py  utils.py
sphinx_pdf_generate/preprocessor/: prep.py
sphinx_pdf_generate/preprocessor/content/: tabbed_block.py
sphinx_pdf_generate/preprocessor/links/: util.py
sphinx_pdf_generate/styles/: __init__.py  _paging.css  _styles.css  toc.css
sphinx_pdf_generate/templates/: default_cover.html.j2  template.py
sphinx_pdf_generate/templates/filters/: __init__.py  url.py
sphinx_pdf_generate/themes/: alabaster.py  generic.py  immaterial_styles.css  material_styles.css  sphinx_immaterial.py  sphinx_material.py
